<resources>
    <!-- General -->
    <string name="app_name">PathFinder</string>
    <string name="map_id">33f20db2d06ca4f9</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="settings_description">If you wish to save recorded trajectories to your files select  Save to Files option. To send data to the server enter your id below. Wait for WiFi option allows you to choose to only send data when connected to WiFi.</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="description_startRec"> Set your location by placing a pin on the map.\nOnce set, add a pin in the direction you are facing. </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="recordingDuration">Recording Duration:</string>
    <string name="recordingDuration_noData">No Data Recorded</string>
    <string name="stopRec">STOP RECORDING</string>
    <string name="PDRDuringTitle">PDR Trajectory</string>
    <string name="SensorsGraphTitle">Live Sensor Data</string>
    <string name="SensorsDropdown">SENSOR DATA DISPLAYED:</string>


    <string name="duringRec_title">RECORDING</string>

    <!-- rec activity fragment-->
    <string name="startRec_title">CHOOSE STARTING POINT</string>
    <string name="location_button">I AM HERE</string>
    <string name="orientation_button">I AM FACING THIS WAY</string>
    <string name="startRec_button">START RECORDING</string>
    <string name="stpRec_title">RECORDING STOPPED</string>
    <string name="stpRec_button">REVIEW DATA</string>

    <!-- Recording Review Fragment -->
    <string name="reviewPage_title">REVIEW RECORDING</string>
    <string name="reviewPage_filePrompt">Enter file name</string>
    <string name="reviewPage_fileHint">Enter file name</string>
    <string name="reviewPage_serverPrompt">Enter server credentials</string>
    <string name="enterTextButton">ENTER</string>
    <string name="saveButton">SAVE</string>
    <string name="sendButton">SEND</string>
    <string name="discardButton">DISCARD</string>
    <string name="PDRReviewTitle">PDR Trajecory</string>

    <!-- About Page -->
    <string name="aboutPage_title">INFORMATION  </string>
    <string name="aboutApp_title"> About PathFinder App </string>
    <string name="AboutApp_text"> PathFinder aids research in indoor positioning, creating indoor
        building maps, and assessing building hotspots.\n \n
        The app collects data from the following sensors:\n
        Accelerometer, Gyroscope, Magnetometer, Barometer, Location, WiFi, Ambient Light, Proximity, Rotation
        and Activity data.\n \n
        These data are used to trace your position as you walk around a building, and are
        submitted to an online database.</string>
    <string name="howToUse_title">Tips on Using PathFinder </string>

    <string name="howToUse_text">  To achieve the best results with PathFinder, try holding your phone
                                    in a consistent orientation. For example, if you wish to take phone call while recording,
                                    lift the phone to your ear before hitting he start recoding button. \n \n
                                    Try to take regular confident steps to assist the step detection algorithms.\n \n
                                    Recognising floor changes can take time, as such continuous floor
                                    changes are discouraged.\n \n
                                    To maximise the benefit of post processing trajectory corrections it is recommend to
                                    finish the recording at a considerable distance from the start point - avoid walking in a loop.
    </string>

    <string name="sensorInfo_title">Sensor Information  </string>
    <string name="sensorInfo_type">Sensor Type: </string>
    <string name="text_spiner_init">Select Sensor Type</string>


    <!-- Files Page -->
    <string name="savedTrajectories_title">SAVED TRAJECTORIES REVIEW</string>
    <string name="textView_choosefileload">Choose saved trajectory file to be displayed</string>
    <string name="Load_button">Load Trajectory</string>
    <string name="ButtonDelete">DELETE FILE</string>



</resources>