<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="12dp"
    tools:context=".StartRecFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView9"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/startRec_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView14"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            android:background="@drawable/text_background"
            style="@style/Widget.MaterialComponents.TextView"
            android:justificationMode="inter_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_startRec"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:textAllCaps="false" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_addStartPoint"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/rounded_corner"
                android:text="@string/location_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/button_addStartDirection"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:text="@string/orientation_button"
                app:layout_constraintBottom_toBottomOf="@+id/button_addStartPoint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button_addStartPoint" />

            <Button
                android:id="@+id/button_startRec"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="72dp"
                android:layout_weight="2"
                android:background="@drawable/rounded_corner"
                android:elevation="0dp"
                android:text="@string/startRec_button"
                app:iconPadding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/google_map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginVertical="12dp"
                android:layout_marginBottom="348dp"
                app:layout_constraintBottom_toTopOf="@+id/button_startRec"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_addStartPoint" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</RelativeLayout>