<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".DashBoard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_navigation"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/savedTrajectories_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView_choosefileload"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/text_background"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/textView_choosefileload"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:textAllCaps="false" />

        <Spinner
            android:id="@+id/spinner_files"
            style="@style/Widget.AppCompat.Spinner"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/text_background"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@+id/button_load"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_choosefileload" />

        <Button
            android:id="@+id/button_load"
            android:layout_width="136dp"
            android:layout_height="0dp"
            android:text="@string/Load_button"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_files"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spinner_files" />

        <FrameLayout
            android:layout_width="334dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/button_sendfromfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_files">

            <com.androidplot.xy.XYPlot
                android:id="@+id/plot3"
                style="@style/APDefacto.Dark"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/spinner2"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/text_background"
                app:backgroundColor="#00FFFFFF"
                app:domainTitle="x-direction [m]"
                app:graphBackgroundColor="#00FFFFFF"
                app:gridBackgroundColor="#00FFFFFF"
                app:lineLabelRotationBottom="-45"
                app:lineLabels="left|bottom"
                app:rangeTitle="y-direction [m]"
                app:title="@string/PDRDuringTitle"
                app:titleTextColor="@color/orange" />
        </FrameLayout>

        <Button
            android:id="@+id/button_sendfromfile"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="12dp"
            android:text="@string/sendButton"
            app:layout_constraintBottom_toBottomOf="@+id/button_delete"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_delete" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="12dp"
            android:text="@string/ButtonDelete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="177dp"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/blue_dark"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation" />

</RelativeLayout>
